adding all changes

--- a/epwscasestudy.html
+++ b/epwscasestudy.html
@@ -65,31 +65,96 @@
      <div class="container">
         <div class="row">
            <div class="col-sm-12 mb-4 text-center">
-             <h1 class="mt-4"> The Project </h1>
-             <div class="text-box mb-5">
-              <p class="mb-4 mt-4 h5">Exterior Power Washing Solutions is a business website that needed a makeover. The client felt that the website did not reflect the look of the company. I set out to create a website that was simple, navigable, and would increase new business inquiries. </p>
+             <h1 class="mt-4"> <strong>Project Summary </strong> </h1>
+             <div class="text-box">
+              <p class="mb-4 mt-4 h5">Exterior Power Washing Solutions is a business website that needed a makeover. The client felt that the website did not reflect the look of the company and that the information was not very clear to potential customers. I set out to create a website that was simple, navigable, and would increase new business inquiries. </p>
+              </div>
+              <div class="row mt-5 mb-5">
+                <div class="col-md-4">
+                  <h3>The Client</h3>
+                  <p class="h5">Exterior Power Washing Solutions business owner </p>
+                  <h3>Timeframe</h3>
+                  <p class="h5"> Two weeks </p>
+                </div>
+                <div class="col-md-4">
+                  <h3>My Role</h3>
+                  <p class="h5">As the sole UX Designer, I worked on user interviews, information architecture, creating low-fidelity wireframes, creating high fidelity page mockups and prototypes for the website.</p>
+                </div>
+                <div class="col-md-4">
+                  <h3>Tools/Methods</h3>
+                  <p class="h5">User Research, Personas, Wireframes, Prototypes, Sketch App, WordPress, HTML, CSS, JavaScript  </p>
+                </div>
               </div>
               <div class="container top-spacer">
+                <div class="top-spacer">
+                  <h1 class="mt-5"> <strong>Project Process</strong></h1>
+                  </div>
+                    <h2 class="mt-5"> User Research</h2>
+                    <div class="text-box mb-5">
+                      <p class="h5"> I began the project by speaking with homeowners about how they perform outdoor home maintenance and/or other services. I conducted 4 informal interviews and chose participants of different ages and genders. The biggest challenge of the project was that I had no commercial business owner to interview and limited time/resources to find the participants.
+                      <p class="mt-5"> Although the interviews were informal, the following questions were asked in every interview: </p>
+                      <ul class="text-left">
+                        <li> How do you usually get home maintenance done? </li>
+                        <li> If you have to find someone to perform a service, where do you start looking?</li>
+                        <li> How do you usually contact businesses? </li>
+                        <li> What makes you feel confident in a business doing a great job? </li>
+                      </ul>
+                      <div class="row mt-5">
+                        <div class="col-md-12"><h2>User Personas</h2>
+                          <p class="h5 mb-5"> From the information gathered from the interviews, I created the primary persona to highlight the most consistent points provided by the users. </p>
+                          <img class="img-fluid" src="img/Persona.png" alt="user persona"></div>
+                      </div>
+                    </div>
+
+
                 <div class="row mb-5">
                   <div class="col-md-6">
-                  <h2 class="mt-4"> The Old Website </h2>
-                  <p>Since I did not have access to current website data, I started out by wireframing the current homepage as well as creating a sitemap with all the current content. I concluded that the main issues were as follows:
-                    <ul>
-                      <li> Unclear hierarchy since links to other pages were scattered across the homepage.</li>
-                      <li> The picture in the hero area did not reflect the business.</li>
-                      <li> Calls-to-action were not distinguishable between the other links on the page </li>
-                      <li> Important information was not readily available/could be consolidated from other pages </li>
+                  <h2 class="mb-4"> The Old Website </h2>
+                  <p class="h5">Since I did not have access to current website analytics data, I started out by wireframing the current homepage as well as creating a sitemap with all the current content. I concluded that the main issues were as follows:
+                    <ul class="text-left">
+                      <li class="h5"> Unclear hierarchy since links to other pages were scattered across the homepage.</li>
+                      <li class="h5"> The picture in the hero area did not reflect the business.</li>
+                      <li class="h5"> Calls-to-action were not distinguishable between the other links on the page. </li>
+                      <li class="h5"> Important information was not readily available and could be consolidated from other pages. </li>
                     </ul>
+                    <img class="img-fluid" src="img/old-site-map.png">
                   </div>
                   <div class="col-md-6">
                     <img class="rounded text-center img-fluid project-image-case" src="img/Old-site-wireframe.png">
                   </div>
                 </div>
-                <div class="top-spacer">
-                  <h2 class="mt-5"> User Research </h2>
-                  <div class="text-box mb-5">
+
+                <div class="row mt-5">
+                  <div class="col-md-12">
+                    <h2 class="mb-5">Sketching and Wireframing</h2>
+                    <p class="h5 mb-5 mt-5"> After discussing with the client, I decided to consolidate the pages and place certain information the main homepage. The new site map was set up with less pages. A few sketches were made on where to place certain elemends based on the user insight.  </p>
+                    </div>
+                    <div class="row mt-5 mb-5">
+                      <div class="col-md-6">
+                        <img class="img-fluid" src="img/new-site-map.png" alt="new site map"></div>
+                      </div>
+                      <div class="col-md-6">
+                    </div>
+                </div>
+
+                <div class="row mt-5">
+                  <div class="col-md-12">
+                    <h3 class="mb-5">Low-fidelity wireframes</h3>
+                    <div class="row mt-5">
+                      <div class="col-md-4">
+                        <img class="img-fluid" src="img/homepage-wireframe.png" alt="Homepage Wireframe">
+                      </div>
+                      <div class="col-md-4">
+                        <img class="img-fluid" src="img/about-us-wireframe.png" alt="About Us Wireframe">
+                      </div>
+                      <div class="col-md-4">
+                        <img class="img-fluid" src="img/frequently-wireframe.png" alt="FAQ Wireframe"></div>
+                      </div>
+                    </div>
                   </div>
-                  </div>
+                
+
+
               </div>
            </div>
         </div>
