--- a/index.html
+++ b/index.html
@@ -144,22 +144,23 @@
            <div class="container">
             <div class="row">
               <div class="col-sm-6 text-center mb-2">
-                  <h2 class="featured-list-icon-text mb-0"><strong><i>Pie it Forward</i></strong></h2>
-                <p class="featured-list-icon-text">
-                   A pay-it-forward style appplication that allows users to pre-purchase a slice of pizza for redemption
-                </p>
-                <a class="btn button_styles mb-3" target="_blank" href="/piecasestudy.html"> View More</a>
-                <p> <img class="rounded text-center img-fluid" src="img/portfolio-wireframe.png" height=250px> </p>
-              </div>
-              <div class="col-sm-6 text-center mb-2">
                   <h2 class="featured-list-icon-text mb-0"><strong><i>EPWS</i></strong></h2>
                 <p class="featured-list-icon-text">
                    A business website redesign case study.
                 </p>
                 <br>
                 <a class="btn button_styles mb-3" target="_blank" href="/epwscasestudy.html"> View More</a>
-                <p> <img class="rounded text-center img-fluid" src="img/portfolio-wireframe.png" height=250px> </p>
+                <p> <img class="rounded text-center img-fluid" style="width:200px" src="img/about-us-wireframe.png" alt="About Us Wireframe"> </p>
               </div>
+              <div class="col-sm-6 text-center mb-2">
+                  <h2 class="featured-list-icon-text mb-0"><strong><i>Pie it Forward</i></strong></h2>
+                <p class="featured-list-icon-text">
+                   A pay-it-forward style appplication that allows users to pre-purchase a slice of pizza for redemption
+                </p>
+                <a class="btn button_styles mb-3" target="_blank" href="/piecasestudy.html"> View More</a>
+                <p> <img class="rounded text-center img-fluid" style="width:300px" src="img/portfolio-wireframe.png" height=250px> </p>
+              </div>
+
 
             </div>
             </div>
